<resources>
    <string name="app_name" translatable="false">Stay-Awake on ADB</string>
    <string name="preference_file_key" translatable="false">com.duck.stay_awake_prefs_file</string>
    <string name="app_version" translatable="false">&lt;u>v %s&lt;/u></string>
    <string name="request_notification_permission">In order to listen for the \'ADB connected\' notification this app
        needs access to read notifications.\nPlease enable this permission for %s
    </string>
    <string name="request_notification_permission_title">Notification access required</string>
    <string name="dev_settings_on">Developer Settings are enabled.</string>
    <string name="dev_settings_off">Developer Settings are &lt;u>not&lt;/u> enabled.</string>
    <string name="dev_settings_hidden">Android 17+ hides developer options and debugging status from apps. Stay Awake is toggled from the ADB connection notification instead.</string>
    <string name="service_name">ADB Notification Listener Service</string>
    <string name="stay_awake">Stay wake</string>
    <string name="stay_awake_description">Screen will never sleep while charging</string>
    <string name="developer_options">Developer Options</string>
    <string name="developer_options_description">Whether developer options are enabled or not</string>
    <string name="usb_debugging">USB debugging</string>
    <string name="usb_debugging_description">Debug mode when USB is connected</string>
    <string name="go_to_settings">go to settings</string>
    <string name="cancel">Cancel</string>
    <string name="show_notification">Show Notification</string>
    <string name="toggle_if_the_notification_should_be_shown">Toggle if the notification should be shown</string>
    <!-- Notification strings -->
    <string name="awake_on_notification_title">Stay Awake setting is On</string>
    <string name="awake_on_notification_text">ADB connected - Stay Awake is On</string>
    <string name="awake_on_notification_big_text">An ADB connection has been detected and the Stay awake setting has been turned on.\nThe setting will automatically be turned off when the ADB connection is lost</string>
    <string name="awake_on_notification_summary">Stay Awake On</string>
    <string name="awake_on_notification_action_text">Turn off</string>
    <string name="awake_off_notification_title">Stay Awake setting is Off</string>
    <string name="awake_off_notification_text">ADB Connected - Stay Awake is Off</string>
    <string name="awake_off_notification_big_text">An ADB connection has been detected, but the Stay Stay Awake setting is currently off.</string>
    <string name="awake_off_notification_summary">Stay Awake Off</string>
    <string name="awake_off_notification_action_text">Turn on</string>
    <!-- ADB Notification text -->
    <string name="adb_notification_title">USB debugging connected</string>
    <string name="adb_notification_title_huawei">USB debugging started</string>
    <string name="adb_wifi_notification_title">Wireless debugging connected</string>
    <!-- New UI strings -->
    <string name="open_developer_options">Open Developer Options</string>
    <string name="auto_toggle_stay_awake">Auto Toggle Stay Awake</string>
    <string name="auto_toggle_stay_awake_description">Automatically turn stay awake on/off when ADB connects/disconnects</string>
    <string name="wireless_debugging">Wireless Debugging</string>
    <string name="wireless_debugging_description">Debug mode when wireless ADB is connected</string>
    <string name="unable_to_open_developer_options">Unable to open Developer Options. Please navigate manually to Settings > Developer Options</string>
    <string name="permission_required_title">Permission Required</string>
    <string name="permission_required_message">This app requires WRITE_SECURE_SETTINGS permission to function properly.\n\nTo grant this permission, connect your device to a computer and run the following ADB command:\n\nadb shell pm grant com.duck.stayawakeadb android.permission.WRITE_SECURE_SETTINGS\n\nThis command cannot be executed from the device itself.</string>
    <string name="copy_command">Copy Command</string>
    <string name="command_copied">Command: adb shell pm grant com.duck.stayawakeadb android.permission.WRITE_SECURE_SETTINGS</string>
    <!-- Stay Awake status strings -->
    <string name="stay_awake_off">Stay Awake is off.</string>
    <string name="stay_awake_ac_only">Stay Awake is on for AC only.</string>
    <string name="stay_awake_usb_only">Stay Awake is on for USB only.</string>
    <string name="stay_awake_wireless_only">Stay Awake is on for Wireless charging only.</string>
    <string name="stay_awake_ac_usb">Stay Awake is on for AC and USB only.</string>
    <string name="stay_awake_ac_wireless">Stay Awake is on for AC and Wireless charging only.</string>
    <string name="stay_awake_usb_wireless">Stay Awake is on for USB and Wireless charging only.</string>
    <string name="stay_awake_all">Stay Awake is on for AC, USB and Wireless charging.</string>
    <!-- Status strings -->
    <string name="enabled">Enabled</string>
    <string name="disabled">Disabled</string>
    <!-- Notification strings -->
    <string name="dont_show_this_notification">Don\'t show this notification</string>
</resources>
