<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <androidx.constraintlayout.widget.Barrier
            android:id="@+id/switch_barrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="devopt_switch,usbdebug_switch,stayawake_switch"
            app:barrierDirection="start"/>

    <TextView
            android:id="@+id/tv_devopt_lbl"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginStart="24dp"
            android:text="@string/developer_options"
            android:textSize="18sp"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/switch_barrier"
            app:layout_constraintBottom_toTopOf="@+id/tv_devopt_des"
            app:layout_constraintVertical_bias="0.0"/>

    <TextView
            android:id="@+id/tv_devopt_des"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/developer_options_description"
            android:textSize="12sp"
            app:layout_constraintTop_toBottomOf="@+id/tv_devopt_lbl"
            app:layout_constraintStart_toStartOf="@+id/tv_devopt_lbl"
            app:layout_constraintEnd_toStartOf="@id/switch_barrier"
            app:layout_constraintBottom_toTopOf="@+id/tv_usbdebug_lbl"/>

    <Switch
            android:id="@+id/devopt_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="13dp"
            android:layout_marginEnd="24dp"
            android:enabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_devopt_lbl"
            app:layout_constraintBottom_toBottomOf="@+id/tv_devopt_des"
            app:layout_constraintStart_toEndOf="@+id/switch_barrier"/>

    <androidx.constraintlayout.widget.Group
            android:id="@+id/devopt_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="tv_devopt_lbl,tv_devopt_des,devopt_switch"/>

    <TextView
            android:id="@+id/tv_usbdebug_lbl"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginStart="24dp"
            android:text="@string/usb_debugging"
            android:textSize="18sp"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintTop_toBottomOf="@id/tv_devopt_des"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/switch_barrier"
            app:layout_constraintBottom_toTopOf="@+id/tv_usbdebug_des"
    />

    <TextView
            android:id="@+id/tv_usbdebug_des"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/usb_debugging_description"
            android:textSize="12sp"
            app:layout_constraintTop_toBottomOf="@+id/tv_usbdebug_lbl"
            app:layout_constraintStart_toStartOf="@+id/tv_usbdebug_lbl"
            app:layout_constraintEnd_toStartOf="@id/switch_barrier"
            app:layout_constraintBottom_toTopOf="@+id/tv_stayawake_lbl"/>

    <Switch
            android:id="@+id/usbdebug_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="13dp"
            android:layout_marginEnd="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_usbdebug_lbl"
            app:layout_constraintBottom_toBottomOf="@+id/tv_usbdebug_des"
            app:layout_constraintStart_toEndOf="@+id/switch_barrier"/>

    <androidx.constraintlayout.widget.Group
            android:id="@+id/usbdebug_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            tools:visibility="visible"
            app:constraint_referenced_ids="tv_usbdebug_lbl,tv_usbdebug_des,usbdebug_switch"/>

    <TextView
            android:id="@+id/tv_stayawake_lbl"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginStart="24dp"
            android:text="@string/stay_awake"
            android:textSize="18sp"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintTop_toBottomOf="@id/tv_usbdebug_des"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/switch_barrier"
            app:layout_constraintBottom_toTopOf="@+id/tv_stayawake_des"
    />

    <TextView
            android:id="@+id/tv_stayawake_des"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/stay_awake_description"
            android:textSize="12sp"
            app:layout_constraintTop_toBottomOf="@+id/tv_stayawake_lbl"
            app:layout_constraintStart_toStartOf="@+id/tv_stayawake_lbl"
            app:layout_constraintEnd_toStartOf="@id/switch_barrier"
            app:layout_constraintBottom_toTopOf="@+id/tv_version"/>

    <Switch
            android:id="@+id/stayawake_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="13dp"
            android:layout_marginEnd="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_stayawake_lbl"
            app:layout_constraintBottom_toBottomOf="@+id/tv_stayawake_des"
            app:layout_constraintStart_toEndOf="@+id/switch_barrier"/>

    <androidx.constraintlayout.widget.Group
            android:id="@+id/stayawake_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            tools:visibility="visible"
            app:constraint_referenced_ids="tv_stayawake_lbl,tv_stayawake_des,stayawake_switch"/>

    <TextView
            android:id="@+id/tv_version"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="20dp"
            android:textSize="12sp"
            android:background="@color/black"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:text="v1.1"/>

</androidx.constraintlayout.widget.ConstraintLayout>